Use event listeners to avoid blur events

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/details.xhtml
@@ -23,7 +23,7 @@
                              value="#{ProzessverwaltungForm.newProcessTitle}"
                              class="input"
                              required="true">
-                    <p:ajax event="blur" oncomplete="compareForm('processEditForm')"/>
+                    <p:ajax event="blur"/>
                 </p:inputText>
             </div>
 
