--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -79,26 +79,52 @@
                                     </h:outputText>
                                 </h3>
                             </li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.schritte}" id="linkTasks" outcome="tasks"><i
-                                class="fa fa-bell fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.prozesse}" id="linkProcesses"
-                                                             outcome="processes"><i
-                                class="fa fa-hourglass-3 fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.projekte}" id="linkProjects"
-                                                             outcome="projects"><i
-                                class="fa fa-folder-open fa-lg"/></h:link></li>
+
+                            <h:panelGroup rendered="#{SecurityAccessController.hasAuthority('viewAllTasks')}">
+                                <li class="nav-pic-text"><h:link value="#{msgs.schritte}" id="linkTasks"
+                                                                 outcome="tasks"><i
+                                    class="fa fa-bell fa-lg"/></h:link></li>
+                            </h:panelGroup>
+
+                            <h:panelGroup rendered="#{SecurityAccessController.hasAuthority('viewAllProcesses')}">
+                                <li class="nav-pic-text"><h:link value="#{msgs.prozesse}" id="linkProcesses"
+                                                                 outcome="processes"><i
+                                    class="fa fa-hourglass-3 fa-lg"/></h:link></li>
+                            </h:panelGroup>
+
+                            <h:panelGroup rendered="#{SecurityAccessController.hasAuthority('viewAllProjects')}">
+                                <li class="nav-pic-text"><h:link value="#{msgs.projekte}" id="linkProjects"
+                                                                 outcome="projects"><i
+                                    class="fa fa-folder-open fa-lg"/></h:link></li>
+                            </h:panelGroup>
+
+                            <h:panelGroup rendered="#{SecurityAccessController.hasAuthority('viewAllUsers')}">
                             <li class="nav-pic-text"><h:link value="#{msgs.benutzer}" id="linkUsers" outcome="users"><i
                                 class="fa fa-user fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.modules}" id="linkModules"
-                                                             outcome="newTaskManager"><i
-                                class="fa fa-puzzle-piece fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.clients}" id="linkClients" outcome="clients"><i
-                                class="fa fa-suitcase fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.help}" id="linkHelp" outcome="help"><i
-                                class="fa fa-life-ring fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.indexing}" id="linkIndexing"
-                                                             outcome="indexingPage"><i
-                                class="fa fa-database fa-lg"/></h:link></li>
+                            </h:panelGroup>
+
+                            <h:panelGroup rendered="true">
+                                <li class="nav-pic-text"><h:link value="#{msgs.modules}" id="linkModules"
+                                                                 outcome="newTaskManager"><i
+                                    class="fa fa-puzzle-piece fa-lg"/></h:link></li>
+                            </h:panelGroup>
+
+                            <h:panelGroup rendered="#{SecurityAccessController.hasAuthority('viewAllClients')}">
+                                <li class="nav-pic-text"><h:link value="#{msgs.clients}" id="linkClients"
+                                                                 outcome="clients"><i
+                                    class="fa fa-suitcase fa-lg"/></h:link></li>
+                            </h:panelGroup>
+
+                            <h:panelGroup rendered="true">
+                                <li class="nav-pic-text"><h:link value="#{msgs.help}" id="linkHelp" outcome="help"><i
+                                    class="fa fa-life-ring fa-lg"/></h:link></li>
+                            </h:panelGroup>
+
+                            <h:panelGroup rendered="true">
+                                <li class="nav-pic-text"><h:link value="#{msgs.indexing}" id="linkIndexing"
+                                                                 outcome="indexingPage"><i
+                                    class="fa fa-database fa-lg"/></h:link></li>
+                            </h:panelGroup>
                         </ul>
                     </li>
                     <li>
