--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processSearchEdit.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processSearchEdit.xhtml
@@ -20,19 +20,19 @@
 
     <h:panelGrid columns="2" cellpadding="10">
         <!-- choose from existing processes  -->
-        <h:outputText value="#{msgs.AuswaehlenAusVorhandenenProzessen}" rendered="#{ProzesskopieForm.useTemplates}"/>
-        <h:selectOneMenu value="#{ProzesskopieForm.auswahl}" rendered="#{ProzesskopieForm.useTemplates}"
+        <h:outputText value="#{msgs.AuswaehlenAusVorhandenenProzessen}" rendered="#{ProzesskopieForm.copyProcess.useTemplates}"/>
+        <h:selectOneMenu value="#{ProzesskopieForm.auswahl}" rendered="#{ProzesskopieForm.copyProcess.useTemplates}"
                          style="margin-left:10px;margin-right:10px; width:200px">
             <f:selectItems value="#{ProzesskopieForm.prozessTemplates}"/>
         </h:selectOneMenu>
-        <h:commandLink action="#{ProzesskopieForm.templateAuswahlAuswerten}" rendered="#{ProzesskopieForm.useTemplates}"
+        <h:commandLink action="#{ProzesskopieForm.templateAuswahlAuswerten}" rendered="#{ProzesskopieForm.copyProcess.useTemplates}"
                        title="#{msgs.AuswaehlenAusVorhandenenProzessen}">
             <h:graphicImage alt="" value="/pages/images/buttons/copy.gif"
                             style="vertical-align:middle; margin-right:3px"/>
             <h:outputText value="#{msgs.uebernehmen}"/>
         </h:commandLink>
         <!-- choose from opac -->
-        <h:panelGroup rendered="#{ProzesskopieForm.useOpac}">
+        <h:panelGroup rendered="#{ProzesskopieForm.copyProcess.useOpac}">
             <h:outputText value="#{msgs.sucheImOpac}" style="display:inline"/>
 
             <h:selectOneMenu id="katalogauswahl" value="#{ProzesskopieForm.opacKatalog}"
@@ -53,11 +53,11 @@
             </h:selectOneMenu>
 
         </h:panelGroup>
-        <h:inputText value="#{ProzesskopieForm.opacSuchbegriff}" rendered="#{ProzesskopieForm.useOpac}"
+        <h:inputText value="#{ProzesskopieForm.opacSuchbegriff}" rendered="#{ProzesskopieForm.copyProcess.useOpac}"
                      style="margin-left:7px;margin-right:7px; width:200px"
                      onkeypress="return checkOpac('OpacRequest',event)"/>
         <h:commandLink action="#{ProzesskopieForm.evaluateOpac}" id="performOpacQuery"
-                       rendered="#{ProzesskopieForm.useOpac}" title="#{msgs.opacAbfragen}">
+                       rendered="#{ProzesskopieForm.copyProcess.useOpac}" title="#{msgs.opacAbfragen}">
             <h:graphicImage alt="query opac" value="/pages/images/buttons/opac.gif"
                             style="vertical-align:middle; margin-right:3px"/>
             <h:outputText value="#{msgs.uebernehmen}"/>
