--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
@@ -131,20 +131,24 @@ button .ui-icon {
     box-shadow: 0 0 0 transparent;
 }
 
+.ui-inputfield.ui-inputtext::placeholder {
+    color: #999999;
+}
+
 .ui-inputfield.ui-inputtext::-webkit-input-placeholder { /* Webkit, Blink */
-    color: #d8d8d8;
+    color: #999999;
 }
 .ui-inputfield.ui-inputtext:-moz-placeholder { /* Firefox 4-18 */
-    color: #d8d8d8;
+    color: #999999;
 }
 .ui-inputfield.ui-inputtext::-moz-placeholder { /* Firefox 19+ */
-    color: #d8d8d8;
+    color: #999999;
 }
 .ui-inputfield.ui-inputtext:-ms-input-placeholder { /* IE 10-11 */
-    color: #d8d8d8;
+    color: #999999;
 }
 .ui-inputfield.ui-inputtext:-ms-input-placeholder { /* Edge */
-    color: #d8d8d8;
+    color: #999999;
 }
 
 .ui-selectcheckboxmenu .ui-selectcheckboxmenu-label,
