fix ruleset selection

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml
@@ -48,8 +48,8 @@
 
             <div>
                 <!-- Preferences -->
-                <p:outputLabel for="Regelsatz" rendered="#{ProzesskopieForm.standardFields.preferences}" value="#{msgs.regelsatz}"/>
-                <h:panelGroup rendered="#{ProzesskopieForm.standardFields.preferences}">
+                <p:outputLabel for="Regelsatz" rendered="#{ProzesskopieForm.standardFields.regelsatz}" value="#{msgs.regelsatz}"/>
+                <h:panelGroup rendered="#{ProzesskopieForm.standardFields.regelsatz}">
                     <p:selectOneMenu id="Regelsatz" value="#{ProzesskopieForm.prozessKopie.ruleset}" converter="#{rulesetConverter}"
                                      onchange="document.getElementById('OpacRequest').click()" styleClass="prozessKopieFeldbreite"
                                      required="true">
