extended AccessController and Service, adjusted Header

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -80,27 +80,29 @@
                                 </h3>
                             </li>
 
-                            <h:panelGroup rendered="#{SecurityAccessController.isAdminOrHasAuthority('viewAllTasks')}">
+                            <h:panelGroup
+                                rendered="#{SecurityAccessController.isAdminOrHasAuthorityForAny('viewAllTasks')}">
                                 <li class="nav-pic-text"><h:link value="#{msgs.schritte}" id="linkTasks"
                                                                  outcome="tasks"><i
                                     class="fa fa-bell fa-lg"/></h:link></li>
                             </h:panelGroup>
 
                             <h:panelGroup
-                                rendered="#{SecurityAccessController.isAdminOrHasAuthority('viewAllProcesses')}">
+                                rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('viewAllProcesses, viewAllBatches')}">
                                 <li class="nav-pic-text"><h:link value="#{msgs.prozesse}" id="linkProcesses"
                                                                  outcome="processes"><i
                                     class="fa fa-hourglass-3 fa-lg"/></h:link></li>
                             </h:panelGroup>
 
                             <h:panelGroup
-                                rendered="#{SecurityAccessController.isAdminOrHasAuthority('viewAllProjects')}">
+                                rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('viewAllProjects, viewAllTemplates, viewAllDockets, viewAllRulesets')}">
                                 <li class="nav-pic-text"><h:link value="#{msgs.projekte}" id="linkProjects"
                                                                  outcome="projects"><i
                                     class="fa fa-folder-open fa-lg"/></h:link></li>
                             </h:panelGroup>
 
-                            <h:panelGroup rendered="#{SecurityAccessController.isAdminOrHasAuthority('viewAllUsers')}">
+                            <h:panelGroup
+                                rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('viewAllUsers, viewAllUserGroups, viewAllLdapGroups')}">
                             <li class="nav-pic-text"><h:link value="#{msgs.benutzer}" id="linkUsers" outcome="users"><i
                                 class="fa fa-user fa-lg"/></h:link></li>
                             </h:panelGroup>
@@ -112,7 +114,7 @@
                             </h:panelGroup>
 
                             <h:panelGroup
-                                rendered="#{SecurityAccessController.isAdminOrHasAuthority('viewAllClients')}">
+                                rendered="#{SecurityAccessController.isAdminOrHasAuthorityForAny('viewAllClients')}">
                                 <li class="nav-pic-text"><h:link value="#{msgs.clients}" id="linkClients"
                                                                  outcome="clients"><i
                                     class="fa fa-suitcase fa-lg"/></h:link></li>
@@ -136,7 +138,7 @@
                         <h:form id="logout-form">
                             <ul id="nav-user">
                                 <li><h3>#{LoginForm.myBenutzer.name} #{LoginForm.myBenutzer.surname}
-                                    <h:outputText rendered="#{SecurityAccessController.hasAuthorityGlobally('admin')}">
+                                    <h:outputText rendered="#{SecurityAccessController.isAdmin()}">
                                         <i>(Admin)</i>
                                     </h:outputText>
                                 </h3></li>
