fix additional field reload on doctyp change

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml
@@ -43,6 +43,7 @@
                                  styleClass="prozessKopieFeldbreite">
                     <f:selectItems value="#{ProzesskopieForm.allDoctypes}" var="step" itemLabel="#{step.localizedLabel}"
                                    itemValue="#{step.title}"/>
+                    <p:ajax event="change"/>
                 </p:selectOneMenu>
             </div>
 
