--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/details.xhtml
@@ -32,14 +32,14 @@
                 <p:selectOneMenu id="project" value="#{ProzessverwaltungForm.projektAuswahl}" required="true">
                     <f:selectItem itemValue="" itemLabel="#{msgs.bitteAuswaehlen}"/>
                     <f:selectItems value="#{ProzessverwaltungForm.projektAuswahlListe}"/>
-                    <p:ajax event="change" oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                 </p:selectOneMenu>
             </div>
 
             <div>
                 <p:outputLabel for="showInList" value="#{msgs.inAuswahllisteAnzeigen}"/>
                 <p:selectBooleanCheckbox id="showInList" value="#{ProzessverwaltungForm.process.inChoiceListShown}">
-                    <p:ajax event="change" oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                 </p:selectBooleanCheckbox>
             </div>
         </p:row>
@@ -49,7 +49,7 @@
                 <p:outputLabel for="ruleset" value="#{msgs.regelsatz}"/>
                 <p:selectOneMenu id="ruleset" value="#{ProzessverwaltungForm.process.ruleset}" required="true" converter="#{rulesetConverter}">
                     <f:selectItems value="#{HelperForm.regelsaetze}"/>
-                    <p:ajax event="change" oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                 </p:selectOneMenu>
             </div>
 
@@ -57,14 +57,14 @@
                 <p:outputLabel for="docket" value="#{msgs.docket}"/>
                 <p:selectOneMenu id="docket" value="#{ProzessverwaltungForm.process.docket}" required="true" converter="#{docketConverter}">
                     <f:selectItems value="#{HelperForm.dockets}"/>
-                    <p:ajax event="change" oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                 </p:selectOneMenu>
             </div>
 
             <div>
                 <p:outputLabel for="isTemplate" value="#{msgs.istTemplate}"/>
                 <p:selectBooleanCheckbox id="isTemplate" value="#{ProzessverwaltungForm.process.template}">
-                    <p:ajax event="change" oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click()"/>
+                    <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
                 </p:selectBooleanCheckbox>
             </div>
         </p:row>
