--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
@@ -28,7 +28,7 @@
                              id="orderUp"
                              update="editForm:tabs:taskTable"
                              rendered="#{(LoginForm.maximaleBerechtigung eq 1) or (LoginForm.maximaleBerechtigung eq 2)}"
-                             oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click();"
+                             oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
                              icon="fa fa-long-arrow-up" styleClass="ui-button-small">
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.task}" value="#{item}"/>
             </p:commandButton>
@@ -36,7 +36,7 @@
                              id="orderDown"
                              update="editForm:tabs:taskTable"
                              rendered="#{(LoginForm.maximaleBerechtigung eq 1) or (LoginForm.maximaleBerechtigung eq 2)}"
-                             oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click();"
+                             oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
                              icon="fa fa-long-arrow-down" styleClass="ui-button-small">
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.task}" value="#{item}"/>
             </p:commandButton>
@@ -60,7 +60,7 @@
                     <p:commandLink action="#{ProzessverwaltungForm.setTaskStatusUp}"
                                    id="taskStatusUp"
                                    title="#{msgs.statusHoeherSetzen}"
-                                   oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click();"
+                                   oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
                                    update="statusColumn">
                         <h:graphicImage alt="status up"
                                         value="/pages/images/buttons/order_right_klein.gif"/>
@@ -72,7 +72,7 @@
                     <p:commandLink action="#{ProzessverwaltungForm.setTaskStatusDown}"
                                    id="taskStatusDown"
                                    title="#{msgs.statusRunterSetzen}"
-                                   oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click();"
+                                   oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
                                    update="statusColumn">
                         <h:graphicImage alt="status down"
                                         value="/pages/images/buttons/order_left_klein.gif"/>
@@ -96,7 +96,7 @@
                            title="#{msgs.loeschen}"
                            action="#{ProzessverwaltungForm.removeTask}"
                            immediate="true"
-                           oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click();"
+                           oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
                            update="taskTable">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener
