--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
@@ -37,7 +37,7 @@
             </p:commandLink>
             <p:commandLink id="deleteTemplateProperty"
                            title="#{msgs.loeschen}"
-                           oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click();"
+                           oncomplete="jQuery('#editForm\\:saveButtonToggler').click();"
                            action="#{ProzessverwaltungForm.deleteTemplateProperty}">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.templateProperty}" value="#{property}"/>
