Transform project archived state to project active state and unify displayed information in list and edit views

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
@@ -38,10 +38,10 @@
 
         <p:column headerText="#{msgs.active}" styleClass="checkboxColumn">
             <h:outputText>
-                <ui:fragment rendered="#{not item.projectIsArchived}">
+                <ui:fragment rendered="#{item.isActive()}">
                     <i class="fa fa-check-square-o fa-lg checkbox-checked"/>
                 </ui:fragment>
-                <ui:fragment rendered="#{item.projectIsArchived}">
+                <ui:fragment rendered="#{not item.isActive()}">
                     <i class="fa fa-minus-square-o fa-lg checkbox-unchecked"/>
                 </ui:fragment>
             </h:outputText>
