Show Kitodo version in footer

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/footer.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/footer.xhtml
@@ -14,7 +14,7 @@
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <div class="wrapper">
         <section id="footer-content">
-            <p>KITODO.PRODUCTION <span>Version 0.0</span></p>
+            <p>KITODO.PRODUCTION <span>Version #{HelperForm.version}</span></p>
         </section>
     </div>
 </ui:composition>
