--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/docketList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/docketList.xhtml
@@ -33,7 +33,7 @@
         </p:column>
 
         <p:column headerText="#{msgs.auswahl}"
-                  rendered="#{(LoginForm.maximaleBerechtigung == 1) || (LoginForm.maximaleBerechtigung == 2)}"
+                  rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editDocket')}"
                   styleClass="actionsColumn">
             <h:link outcome="/pages/editDocket"
                     title="#{msgs.editDocket}">
