--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml
@@ -56,7 +56,7 @@
                 <div>
                     <!-- language -->
                     <h:outputLabel for="languages" value="#{msgs.languageUserInterface}" />
-                    <p:selectOneMenu id="languages" value="#{SpracheForm.locale}" style="margin-bottom: 0">
+                    <p:selectOneMenu id="languages" value="#{SpracheForm.language}" style="margin-bottom: 0">
                         <f:selectItems value="#{SpracheForm.supportedLocales}" var="entry"
                                        itemLabel="#{entry['displayLanguageSelf']}"
                                        itemValue="#{entry['id']}"/>
@@ -75,8 +75,9 @@
                              icon="fa fa-floppy-o fa-lg"
                              iconPos="right"
                              validateClient="true"
+                             onclick="PF('notifications').renderMessage({'summary':'#{msgs.configurationSaving}','severity':'info'});"
                              styleClass="button-filled-blue">
-                <f:ajax execute="@form" render="@form"/>
+                <f:ajax execute="@form" render="@all"/>
             </p:commandButton>
         </p:panelGrid>
     </h:form>
