--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml
@@ -21,18 +21,12 @@
     <p:panelGrid layout="grid" columns="2">
         <p:row>
             <div>
-                <!-- process template -->
-                <p:outputLabel value="#{msgs.prozessvorlage}"/>
-                <h3><p:outputLabel value="#{ProzesskopieForm.prozessVorlage.title}"/></h3>
-            </div>
-
-            <div>
                 <!-- process title -->
                 <p:outputLabel for="processTitle" value="#{msgs.prozessTitel}"/>
-                <h:panelGroup>
-                    <p:inputText class="input" id="processTitle" value="#{ProzesskopieForm.prozessKopie.title}" styleClass="prozessKopieFeldbreite"/>
-                    <p:commandLink action="#{ProzesskopieForm.calculateProcessTitle}" value="#{msgs.generieren}"/>
-                </h:panelGroup>
+                <p:inputText id="processTitle" value="#{ProzesskopieForm.prozessKopie.title}" styleClass="input-with-button"/>
+                <p:commandButton id="generateTitleButton"
+                                 actionListener="#{ProzesskopieForm.calculateProcessTitle}"
+                                 icon="fa fa-cog" title="#{msgs.generieren}"/>
             </div>
 
             <div>
@@ -71,7 +65,9 @@
                     <p:ajax event="change"/>
                 </p:selectManyMenu>
             </div>
+        </p:row>
 
+        <p:row>
             <div>
                 <!-- Tifheader - Documentname -->
                 <p:outputLabel for="tifHeaderDocumentName" value="#{msgs.tifheaderdocumentname}"/>
@@ -85,17 +81,16 @@
             </div>
 
             <div>
-                <p:outputLabel for="useTemplates" value="#{msgs.inAuswahllisteAnzeigen}" rendered="#{ProzesskopieForm.useTemplates}"/>
-                <p:selectBooleanCheckbox class="input" id="useTemplates" rendered="#{ProzesskopieForm.useTemplates}"
-                                         value="#{ProzesskopieForm.prozessKopie.inChoiceListShown}"/>
-            </div>
-
-            <div>
                 <p:outputLabel for="guessImages" value="#{msgs.guessImages}" rendered="#{ProzesskopieForm.standardFields.images}"/>
                 <p:inputText class="input" id="guessImages" value="#{ProzesskopieForm.imagesGuessed}" rendered="#{ProzesskopieForm.standardFields.images}"
                              styleClass="prozessKopieFeldbreite"/>
             </div>
 
+            <div>
+                <p:outputLabel for="useTemplates" value="#{msgs.inAuswahllisteAnzeigen}" rendered="#{ProzesskopieForm.useTemplates}"/>
+                <p:selectBooleanCheckbox class="input" id="useTemplates" rendered="#{ProzesskopieForm.useTemplates}"
+                                         value="#{ProzesskopieForm.prozessKopie.inChoiceListShown}"/>
+            </div>
         </p:row>
 
     </p:panelGrid>
